Adaptations de la création de bien
