# app/user/users.model.js
@@ -3,11 +3,11 @@
 // les retours
 const User = function(user) {
     this.ID         = user.id;
-    this.Nom        = user.nom;
-    this.Prenom     = user.prenom;
-    this.Mail       = user.mail;
-    this.Telephone  = user.telephone;
-    this.Password = user.password;
+    this.Nom        = user.Nom;
+    this.Prenom     = user.Prenom;
+    this.Mail       = user.Mail;
+    this.Telephone  = user.Telephone;
+    this.MDP = user.MDP;
 };
 
 module.exports = User;
